hphp/test/slow/reified_generics/error-handler-3.php.expectf
ERROR: string(71) "Argument 1 passed to f() must be an instance of C<int>, given C<string>"

Catchable fatal error: Argument 1 passed to f() must be an instance of C<int>, given C<string> in %s on line 20
